<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/account_preferences">

        <PreferenceScreen
            android:title="@string/profile_preference"
            android:summary="@string/summary_profile_preference">

            <intent android:action="edu.dartmouth.cs.myruns.ProfileActivity.action.ACTION_MAIN_ACTIVITY"/>


        </PreferenceScreen>

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/privacy_preference"
            android:summary="@string/summary_privacy_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/additional_preferences">


        <ListPreference
            android:key="list_preference"
            android:title="@string/unit_preference"
            android:summary="@string/summary_unit_preference"
            android:entries="@array/unit_pref"
            android:entryValues="@array/unit_pref"
            android:dialogTitle="@string/unit_preference"
            android:defaultValue="Imperial (Miles)"/>

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/comment_preference"
            android:summary="@string/summary_comment_preference"
            android:dialogTitle="@string/comment_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/misc_preferences">

        <PreferenceScreen
            android:title="@string/homepage_preference"
            android:summary="@string/summary_homepage_preference">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.cs.dartmouth.edu/~campbell/" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>