

        <FrameLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            tools:context="edu.dartmouth.cs.myruns.StartFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inputtype" />


        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputSpinner"
            android:drawSelectorOnTop="true"
            android:entries="@array/input_array"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activitytype"
            android:layout_marginTop="60dp"/>


        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activitySpinner"
            android:drawSelectorOnTop="true"
            android:entries="@array/activity_array"
            android:layout_marginTop="90dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/start"
            android:layout_marginTop="120dp"
/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync"
            android:id="@+id/sync"
            android:layout_marginTop="170dp"
/>
        </FrameLayout>
